# connectify-iterm2

./: CONFIG_MIGRATION.md  DEVELOPMENT.md  LAUNCHER_OPTIONS.md  MACOS_SHORTCUT_SETUP.md  Makefile  README.md  REPO_MIGRATION.md  SSH_Manager_Launcher.applescript  TODO.md  api_server.py  connectify.py  connectify.spec  dev-install.sh  install.sh  launch.spec  launch_ui.sh  main.py  pyproject.toml  quick_launch.sh  setup-autostart.sh  shortcut_script.sh  uninstall.sh  update-install.sh  update_app_icon.sh  version.py
.github/workflows/: release.yml
SSH Manager Launcher.app/Contents/: Info.plist
SSH Manager Launcher.app/Contents/MacOS/: applet
SSH Manager Launcher.app/Contents/Resources/: applet.icns
SSH Manager Launcher.app/Contents/Resources/Scripts/: main.scpt
SSH Manager Launcher.app/Contents/_CodeSignature/: CodeResources
static/: app.js  index.html  styles.css
tests/: test_api.py
