[project]
name = "iterm2-ssh-session-manager"
version = "0.1.0"
description = "SSH Session Manager for iTerm2 with credential storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inquirer>=3.4.0",
    "keyring>=25.6.0",
    "pyinstaller>=6.14.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
]
